# headroom

./: README.md  pyproject.toml  test.py
src/headroom/: builder.py  counter.py
tests/: test_builder.py  test_counter.py
